1. mpu6500 센서를 pif_mpu6500으로 교체함.

--- a/naze32/Makefile
+++ b/naze32/Makefile
@@ -279,10 +279,13 @@ COMMON_SRC = build_config.c \
 		   $(DEVICE_STDPERIPH_SRC)
 
 PIF_SRC = \
+            ../../pif/source/communication/pif_i2c.c \
             ../../pif/source/core/pif.c \
             ../../pif/source/core/pif_obj_array.c \
             ../../pif/source/core/pif_task.c \
-            ../../pif/source/core/pif_timer.c
+            ../../pif/source/core/pif_timer.c \
+            ../../pif/source/sensor/pif_imu_sensor.c \
+            ../../pif/source/sensor/pif_mpu6500.c
 
 HIGHEND_SRC = \
 		   ../controller/flight/gtune.c \
