1. Baro의 bmp280 제어를 pif_bmp280으로 교체함.

--- a/naze32/Makefile
+++ b/naze32/Makefile
@@ -342,6 +342,7 @@ PIF_SRC = \
             ../../pif/source/core/pif_task.c \
             ../../pif/source/core/pif_timer.c \
             ../../pif/source/sensor/pif_imu_sensor.c \
+            ../../pif/source/sensor/pif_bmp280.c \
             ../../pif/source/sensor/pif_mpu6500.c
 
 OSD_SYSTEM_SRC = \
