1. sonar 기능을 pif_hc_sr04로 대체함.

--- a/naze32/Makefile
+++ b/naze32/Makefile
@@ -343,6 +343,7 @@ PIF_SRC = \
             ../../pif/source/core/pif_timer.c \
             ../../pif/source/sensor/pif_imu_sensor.c \
             ../../pif/source/sensor/pif_bmp280.c \
+			../../pif/source/sensor/pif_hc_sr04.c \
             ../../pif/source/sensor/pif_mpu6500.c \
 			../../pif/source/sensor/pif_qmc5883.c
 
