1. (*pif_act_timer1us)()를 pif_timer1us로 변경함. 2. debug_mode에 RC_TASK과 SERIAL_TASK를 추가함. 3. 기존 taskSerialCheck과 rxUpdateCheck을 별도의 task로 변경함.

--- a/naze32/.gitignore
+++ b/naze32/.gitignore
@@ -1,6 +1,6 @@
 *.i
 *.o
-*.s
+obj/**/*.s
 .DS_Store
 *~
 *.uvopt
@@ -13,7 +13,6 @@
 .settings
 .cproject
 patches/
-#startup_stm32f10x_md_gcc.s
 .idea
 
 # script-generated files
